--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "connect-flash": "latest",
     "cookie-parser": "~1.3.5",
     "dateformat": "latest",
-    "debug": "~2.2.0",
-    "ejs": "~2.3.3",
+    "debug": ">=2.6.9",
+    "ejs": ">=2.5.5",
     "express": "~4.13.1",
     "express-mailer": "^0.3.0",
     "express-session": "latest",
@@ -22,7 +22,7 @@
     "md5": "latest",
     "mime": "latest",
     "mongoose": "latest",
-    "morgan": "~1.6.1",
+    "morgan": ">=1.9.1",
     "multer": "latest",
     "mysql": "latest",
     "node-constants": "latest",
