fix bug in heroku

--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "request": "latest",
     "serve-favicon": "~2.3.0",
     "simple-encryptor": "latest",
-    "underscore": "latest"
+    "underscore": "latest",
+    "cors": "2.8.5",
+    "express-formidable": "1.2.0",
+    "puppeteer": "1.19.0",
+    "uuid": "3.3.2"
   }
 }
