--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "connect": "latest",
     "connect-flash": "latest",
     "cookie-parser": "~1.3.5",
+    "cors": "2.8.5",
     "dateformat": "latest",
     "debug": ">=2.6.9",
     "ejs": ">=2.5.5",
     "express": "~4.13.1",
+    "express-formidable": "1.2.0",
     "express-mailer": "^0.3.0",
     "express-session": "latest",
     "fs-extra": "latest",
@@ -36,13 +38,12 @@
     "passport": "latest",
     "passport-local": "latest",
     "pm2": "latest",
+    "puppeteer": "1.19.0",
     "request": "latest",
     "serve-favicon": "~2.3.0",
     "simple-encryptor": "latest",
     "underscore": "latest",
-    "cors": "2.8.5",
-    "express-formidable": "1.2.0",
-    "puppeteer": "1.19.0",
-    "uuid": "3.3.2"
+    "uuid": "3.3.2",
+    "yarn": "^1.17.3"
   }
 }
